More performace testing and new results